VZDEV/src/objects/CCPM_processingQueue__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_InsertedDateTime__c</fullName>
        <label>Inserted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_SObjectType__c</fullName>
        <label>SObject Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_accountUniqueID__c</fullName>
        <label>Account Unique ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_cartType__c</fullName>
        <label>Cart Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_leadID__c</fullName>
        <label>Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_queueType__c</fullName>
        <label>Queue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS Schedules To Be Removed</fullName>
                </value>
                <value>
                    <fullName>Cart Type Processing for Converted Leads</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_storeID__c</fullName>
        <label>Store ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Processing Queue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Processing Queue Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processing Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>